Fix header overflow

--- a/source/sass/blocks/_navbar.scss
+++ b/source/sass/blocks/_navbar.scss
@@ -13,11 +13,12 @@
 
 .navbar__menu {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   width: 74.91%;
-  height: 62px;
+  min-height: 62px;
   margin: 0 auto;
   padding: 15px 22px 0 19px;
 
@@ -29,6 +30,8 @@
 
 .navbar__menu-item {
   position: relative;
+
+  margin-bottom: 12px;
 
   transition: all 200ms ease;
   letter-spacing: -0.005em;
@@ -108,6 +111,7 @@
 
     width: 100%;
     height: 60px;
+    padding-right: 40px;
   }
 
   .navbar__burger {
